feat: 지역별, 가이드 상세 페이지 레이아웃

--- a/src/components/pages/GuideDetailPage/GuideDetailPage.module.css
+++ b/src/components/pages/GuideDetailPage/GuideDetailPage.module.css
@@ -2,4 +2,11 @@
 }
 .webGuideDetail {
   border: 1px solid black;
+  display: flex;
+}
+.guideprofile {
+  border: 1px solid black;
+}
+.tourofguide {
+  border: 1px solid black;
 }
