--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,20 @@
   font-weight: 400;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'KBO-Dia-Gothic_bold';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2304-2@1.0/KBO-Dia-Gothic_bold.woff') format('woff');
+  font-weight: 700;
+  font-style: normal;
+}
+
+.container {
+  /* width: 1000px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column; */
+  width: 1000px;
+  margin: 0 auto;
+  font-family: 'Pretendard-Regular';
+}
