--- a/src/pages/GuidePage/GuidePage.module.css
+++ b/src/pages/GuidePage/GuidePage.module.css
@@ -2,22 +2,19 @@
 
 .famousGuide {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   border: 1px solid black;
-}
-
-.guideBox {
-  border: 1px solid black;
-  margin: 10px;
 }
 
 .guideSearchBox {
   border: 1px solid black;
   display: flex;
+  padding: 15px;
 }
 .SearchConditionBox {
   border: 1px solid black;
   flex: 1;
+  padding: 30px;
 }
 
 .resultSearchBox {
