--- a/src/components/atoms/Navbar/Navbar.module.css
+++ b/src/components/atoms/Navbar/Navbar.module.css
@@ -1,11 +1,12 @@
 .webNav {
   box-sizing: border-box;
-  padding: 0;
+  padding: 10px 30px;
   margin: 0;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
+
 .navLogoImage {
   width: 12vw;
   padding: 0;
@@ -19,4 +20,11 @@
 .appNav {
   display: flex;
   justify-content: space-between;
+}
+
+.main {
+  background-color: transparent;
+  position: absolute;
+  top: 0;
+  color: #ffffff;
 }
