--- a/src/pages/MainPage/MainPage.module.css
+++ b/src/pages/MainPage/MainPage.module.css
@@ -1,5 +1,5 @@
 .background {
-  background-image: url('../../asset/images/maintest.png');
+  background-image: url('asset/images/maintest.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50%;
@@ -7,12 +7,24 @@
   height: 500px;
 }
 
-.searchbar {
-  background-color: #eaeaea;
-  opacity: 0.8;
-  width: 50%;
-  height: 2rem;
-  border: none;
-  outline: none;
-  border-radius: 8px;
+.header {
+  padding: 300px 0 100px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.title {
+  font-family: 'Happiness-Sans-Title';
+  font-size: 30px;
+  color: white;
+  margin-bottom: 20px;
+  filter: drop-shadow(0px 5px 10px rgba(0, 0, 0, 0.3));
+}
+
+.subtitle {
+  font-family: 'Happiness-Sans-Title';
+  font-size: 25px;
+  font-weight: 800;
+  margin: 20px 0;
 }
