--- a/src/pages/LoginPage/Signup.module.css
+++ b/src/pages/LoginPage/Signup.module.css
@@ -6,45 +6,23 @@
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.imgBox {
-  width: 70%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  background: radial-gradient(
-    50% 50% at 50% 50%,
-    rgba(238, 190, 242, 0.25) 0%,
-    rgba(217, 217, 217, 0) 100%
-  );
-}
-
-.welcome {
-  z-index: 1;
-  position: absolute;
-  top: 100px;
-  left: 50px;
-  font-size: 50px;
+  flex-direction: column;
 }
 
 .formBox {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
-  width: 30%;
-  height: 80%;
-  gap: 10px;
-}
-
-.signupImage {
-  width: 500px;
-  height: 500px;
+  width: 100%;
+  gap: 10%;
 }
 
 .inputBox {
-  width: 100%;
+  width: 30%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 20px;
 }
