--- a/src/components/atoms/Navbar/Navbar.module.css
+++ b/src/components/atoms/Navbar/Navbar.module.css
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  z-index: 1;
 }
 
 .navLogoImage {
@@ -27,4 +28,9 @@
   position: absolute;
   top: 0;
   color: #ffffff;
+}
+
+.notMain {
+  position: absolute;
+  top: 0;
 }
