--- a/src/pages/Tour/TourList.module.css
+++ b/src/pages/Tour/TourList.module.css
@@ -1,8 +1,61 @@
-.background {
-  background-image: url('asset/images/maintest.png');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: 50%;
-  width: 100%;
-  height: 500px;
+.howmanydaysbox {
+  width: 800px;
+}
+
+FormGroup {
+  display: flex;
+}
+
+.search {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.topdiv {
+  font-size: 80px;
+  font-weight: bold;
+  margin-left: 20px;
+}
+
+.topcard {
+  display: flex;
+}
+
+.cardovertext {
+  position: absolute;
+  left: 30px;
+  bottom: 50px;
+  font-size: 50px;
+  font-weight: bold;
+  zindex: 2;
+}
+
+.selectedtheme {
+  display: flex;
+  font-size: 30px;
+  font-weight: bold;
+  margin: 30px 20px 20px 20px;
+}
+.themes {
+  width: 70%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.tourtheme {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 0.7px solid;
+  border-radius: 6px;
+  width: 60px;
+  height: 25px;
+  padding: 2px;
+}
+
+.selected {
+  background-color: #0052b4;
+  color: white;
 }
