feat: 가이드 디테일

--- a/src/pages/AreaPage/AreaPage.module.css
+++ b/src/pages/AreaPage/AreaPage.module.css
@@ -8,8 +8,13 @@
 }
 
 .mapsearch {
-  flex: 1;
+  width: 500px;
 }
 .map {
-  flex: 3;
+  width: 1000px;
+}
+
+.searcharea {
+  width: 200px;
+  height: 100px;
 }
