--- a/src/pages/LoginPage/Login.module.css
+++ b/src/pages/LoginPage/Login.module.css
@@ -1,16 +1,25 @@
-.container {
-  height: calc(100% - 100px);
-  width: 1060px;
-  margin-left: 10%;
-  margin-right: 10%;
+.background {
+  background-image: url("asset/images/maintest.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 50%;
+  width: 100%;
+  height: 500px;
+}
+
+.formBox {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 1000px;
+  height: 1000px;
+  gap: 10%;
+  font-family: "Pretendard-Regular";
 }
 
 .imgBox {
-  width: 70%;
-  height: 100%;
+  width: 50%;
+  height: 60%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -21,25 +30,25 @@
     rgba(217, 217, 217, 0) 100%
   );
 }
+.loginImage {
+  width: 500px;
+  height: 500px;
+}
 
 .welcome {
   z-index: 1;
   position: absolute;
-  top: 100px;
+  top: 0;
   left: 50px;
   font-size: 50px;
 }
 
-.formBox {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+.inputBox {
   width: 30%;
-  gap: 40px;
-}
-
-.loginImage {
-  width: 500px;
-  height: 500px;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 20px;
 }
