--- a/src/pages/LoginPage/Signup.module.css
+++ b/src/pages/LoginPage/Signup.module.css
@@ -1,25 +1,51 @@
-.container {
-  height: calc(100% - 100px);
-  width: 1060px;
-  margin-left: 10%;
-  margin-right: 10%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+.background {
+  background-image: url("asset/images/maintest.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 50%;
+  width: 100%;
+  height: 500px;
 }
 
 .formBox {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  width: 1000px;
+  height: 1000px;
   gap: 10%;
+  font-family: "Pretendard-Regular";
+}
+
+.imgBox {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  background: radial-gradient(
+    50% 50% at 50% 50%,
+    rgba(238, 190, 242, 0.25) 0%,
+    rgba(217, 217, 217, 0) 100%
+  );
+}
+.signupImage {
+  width: 500px;
+  height: 500px;
+}
+
+.welcome {
+  z-index: 1;
+  position: absolute;
+  top: 100px;
+  left: 50px;
+  font-size: 50px;
 }
 
 .inputBox {
   width: 30%;
-  height: 100%;
+  height: auto;
   display: flex;
   align-items: center;
   justify-content: center;
