--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -3,13 +3,13 @@
   border-radius: 5px;
   background-color: white;
   width: 300px;
-  margin: 10px;
+  margin: 0 10px;
   transition: box-shadow 0.15s ease-out, transform 0.15s ease-out;
 }
 
 .card:hover {
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-  transform: translateY(-5px);
+  /* transform: translateY(-5px); */
 }
 
 .content {
@@ -24,7 +24,6 @@
   margin: auto;
   padding-bottom: 10px;
 }
-
 
 .title {
   font-size: 18px;
