--- a/src/pages/RecommendPage/Recommend.module.css
+++ b/src/pages/RecommendPage/Recommend.module.css
@@ -1,16 +1,51 @@
 .background {
-  background-image: url('asset/images/test.png');
+  background-image: url('asset/images/maintest.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50%;
   width: 100%;
-  height: 400px;
+  height: 500px;
 }
 
 .header {
+  padding: 260px 0 100px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.title {
   font-family: 'Happiness-Sans-Title';
-  padding: 260px 0;
   font-size: 30px;
   color: white;
+  margin-bottom: 20px;
   filter: drop-shadow(0px 5px 10px rgba(0, 0, 0, 0.3));
+}
+
+.container {
+  display: flex;
+}
+
+.sidebar {
+  flex: 3;
+}
+
+.content {
+  flex: 8;
+}
+
+.length {
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 30px;
+}
+
+.cardContainer {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px;
+}
+
+.cardItem {
+  width: 100%;
 }
