--- a/src/pages/AreaPage/AreaPage.module.css
+++ b/src/pages/AreaPage/AreaPage.module.css
@@ -3,18 +3,22 @@
   margin: 0;
   padding: 0;
   display: flex;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: calc(100vh - 60px);
+}
+.searcharea {
+  border: 1px solid black;
 }
 
 .mapsearch {
-  width: 500px;
-}
-.map {
-  width: 1000px;
+  background-color: white;
+  z-index: 3;
+  width: 300px;
 }
 
 .searcharea {
-  width: 200px;
-  height: 100px;
+}
+
+.map {
+  width: calc(100% - 300px);
 }
