--- a/src/pages/GuidePage/GuidePage.module.css
+++ b/src/pages/GuidePage/GuidePage.module.css
@@ -21,3 +21,11 @@
   border: 1px solid black;
   flex: 3;
 }
+
+.serachbutton {
+  margin-top: 20px;
+  background-color: skyblue;
+  border: none;
+  width: 100%;
+  height: 10%;
+}
