feat: 카카오 맵 추가

--- a/src/pages/GuidePage/GuidePage.module.css
+++ b/src/pages/GuidePage/GuidePage.module.css
@@ -21,6 +21,13 @@
   border: 1px solid black;
   flex: 3;
 }
+.searchguides {
+  display: flex;
+  justify-content: space-evenly;
+}
+.guidecard {
+  flex: 1;
+}
 
 .serachbutton {
   margin-top: 20px;
