--- a/src/App.css
+++ b/src/App.css
@@ -4,29 +4,26 @@
   padding: 0;
 }
 * {
-  font-family: "Pretendard-Regular";
+  font-family: 'Pretendard-Regular';
 }
 
 @font-face {
-  font-family: "Pretendard-Regular";
-  src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff")
-    format("woff");
+  font-family: 'Pretendard-Regular';
+  src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "LINESeedKR-Bd";
-  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/LINESeedKR-Bd.woff2")
-    format("woff2");
+  font-family: 'LINESeedKR-Bd';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/LINESeedKR-Bd.woff2') format('woff2');
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Happiness-Sans-Title";
-  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2205@1.0/Happiness-Sans-Title.woff2")
-    format("woff2");
+  font-family: 'Happiness-Sans-Title';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2205@1.0/Happiness-Sans-Title.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
 }
@@ -39,10 +36,11 @@
   padding-top: 50px;
   width: 1000px;
   margin: 0 auto;
-  font-family: "Pretendard-Regular";
+  font-family: 'Pretendard-Regular';
 }
 
 .color {
+  font-family: 'Happiness-Sans-Title';
   color: #50abf2;
 }
 
@@ -56,4 +54,17 @@
   &:hover {
     background-color: #129eed;
   }
+}
+
+.up {
+  transition: transform 0.3s ease;
+
+  &:hover {
+    transform: translateY(-5px);
+  }
+}
+
+.center {
+  display: flex;
+  justify-content: center;
 }
