--- a/src/pages/RecommendPage/Recommend.module.css
+++ b/src/pages/RecommendPage/Recommend.module.css
@@ -22,30 +22,31 @@
   filter: drop-shadow(0px 5px 10px rgba(0, 0, 0, 0.3));
 }
 
-.container {
-  display: flex;
-}
-
-.sidebar {
-  flex: 3;
-}
-
-.content {
-  flex: 8;
-}
-
 .length {
   font-size: 24px;
   font-weight: 700;
-  margin-bottom: 30px;
 }
 
 .cardContainer {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-gap: 20px;
+  grid-gap: 25px;
+  justify-content: center;
+}
+
+.cardContainer2 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 25px;
+  justify-content: center;
 }
 
 .cardItem {
   width: 100%;
+}
+
+.explain {
+  font-size: 16px;
+  color: #b4b4b4;
+  margin-bottom: 35px;
 }
