--- a/src/pages/WantTour/WantTourList.module.css
+++ b/src/pages/WantTour/WantTourList.module.css
@@ -8,10 +8,17 @@
 }
 
 .header {
+  padding: 260px 0 50px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.title {
   font-family: 'Happiness-Sans-Title';
-  padding: 295px 0 20px 0;
-  color: white;
   font-size: 30px;
+  color: white;
+  margin-bottom: 20px;
   filter: drop-shadow(0px 5px 10px rgba(0, 0, 0, 0.3));
 }
 
@@ -25,14 +32,20 @@
 
 .listTitle span:nth-child(1) {
   flex: 6;
+  display: flex;
+  justify-content: center;
 }
 
 .listTitle span:nth-child(2) {
   flex: 3;
+  display: flex;
+  justify-content: center;
 }
 
 .listTitle span:nth-child(3) {
-  flex: 3;
+  flex: 2;
+  display: flex;
+  justify-content: center;
 }
 
 .listContainer {
