--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   margin: 0;
   padding: 0;
 }
+
 * {
   font-family: 'Pretendard-Regular';
 }
@@ -11,13 +12,6 @@
   font-family: 'Pretendard-Regular';
   src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
   font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'LINESeedKR-Bd';
-  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/LINESeedKR-Bd.woff2') format('woff2');
-  font-weight: 700;
   font-style: normal;
 }
 
@@ -37,6 +31,10 @@
   width: 1000px;
   margin: 0 auto;
   font-family: 'Pretendard-Regular';
+}
+
+.font-Happiness {
+  font-family: 'Happiness-Sans-Title';
 }
 
 .color {
