--- a/src/pages/WantTour/WantTourList.module.css
+++ b/src/pages/WantTour/WantTourList.module.css
@@ -22,6 +22,11 @@
   filter: drop-shadow(0px 5px 10px rgba(0, 0, 0, 0.3));
 }
 
+.category {
+  font-family: 'Happiness-Sans-Title';
+  color: #c5c5c5;
+}
+
 .listTitle {
   display: flex;
   justify-content: space-between;
@@ -34,18 +39,24 @@
   flex: 6;
   display: flex;
   justify-content: center;
+  font-family: 'Happiness-Sans-Title';
+  color: #a4a4a4;
 }
 
 .listTitle span:nth-child(2) {
   flex: 3;
   display: flex;
   justify-content: center;
+  font-family: 'Happiness-Sans-Title';
+  color: #a4a4a4;
 }
 
 .listTitle span:nth-child(3) {
   flex: 2;
   display: flex;
   justify-content: center;
+  font-family: 'Happiness-Sans-Title';
+  color: #a4a4a4;
 }
 
 .listContainer {
@@ -54,6 +65,31 @@
   border-radius: 10px;
   border: 1px solid #c0c0c0;
   padding: 10px 30px;
+}
+
+.post {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 25px 5px 25px;
+  font-size: 17px;
+}
+
+.post span:nth-child(1) {
+  flex: 6;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.post span:nth-child(2) {
+  flex: 3;
+  display: flex;
+  justify-content: center;
+}
+
+.post span:nth-child(3) {
+  flex: 2;
+  display: flex;
+  justify-content: center;
 }
 
 .button {
