--- a/src/pages/GuidePage/GuidePage.module.css
+++ b/src/pages/GuidePage/GuidePage.module.css
@@ -1,24 +1,32 @@
-/* webGuide */
+.webguide {
+  padding-left: 20px;
+  padding-right: 20px;
+}
 
 .famousGuide {
   display: flex;
   justify-content: space-evenly;
   border: 1px solid black;
+  border-radius: 6px;
+  margin-bottom: 25px;
+  height: 180px;
 }
 
 .guideSearchBox {
   border: 1px solid black;
   display: flex;
   padding: 15px;
+  border-radius: 6px;
 }
 .SearchConditionBox {
   border: 1px solid black;
   flex: 1;
   padding: 30px;
+  border-radius: 6px;
 }
 
 .resultSearchBox {
-  border: 1px solid black;
+  text-align: center;
   flex: 3;
 }
 .searchguides {
@@ -30,8 +38,9 @@
 }
 
 .serachbutton {
+  color: white;
   margin-top: 20px;
-  background-color: skyblue;
+  background-color: rgb(80, 171, 242);
   border: none;
   width: 100%;
   height: 10%;
