--- a/src/pages/WantTour/WantTour.module.css
+++ b/src/pages/WantTour/WantTour.module.css
@@ -2,7 +2,7 @@
   background-color: #ffffff;
   border-radius: 10px;
   border: 1px solid #c0c0c0;
-  padding: 30px;
+  padding: 40px 50px;
 }
 
 .title {
@@ -33,7 +33,7 @@
   font-size: 17px;
   padding: 3px 10px;
   border-radius: 5px;
-  width: 90%;
+  width: 80%;
 }
 
 .input:focus {
@@ -41,25 +41,34 @@
   border-color: #ffffff;
 }
 
-textarea {
+.textarea {
   border: 1px solid #c0c0c0;
   background-color: #f9f9f9;
   font-size: 17px;
   padding: 3px 5px;
   border-radius: 5px;
-  width: 90%;
+  width: 80%;
   height: 140px;
   padding: 5px 10px;
   outline-color: #50abf2;
 }
 
-textarea:focus {
+.textarea:focus {
   border-color: 1px solid #50abf2;
 }
 
 .price {
-  width: 50px;
   text-align: right;
+  border: 1px solid #c0c0c0;
+  background-color: #f9f9f9;
+  font-size: 17px;
+  padding: 3px 10px;
+  border-radius: 5px;
+}
+
+.price:focus {
+  outline: 2px solid #50abf2;
+  border-color: #ffffff;
 }
 
 .add {
@@ -76,7 +85,7 @@ textarea:focus {
 }
 
 .location {
-  width: 90%;
+  width: 80%;
   display: flex;
   justify-content: space-between;
 }
@@ -102,7 +111,6 @@ textarea:focus {
 
 .parentContainer {
   display: flex;
-  /* justify-content: space-between; */
   align-items: center;
 }
 
@@ -110,11 +118,10 @@ textarea:focus {
   font-family: 'Happiness-Sans-Title';
   font-size: 30px;
   margin-left: 20px;
-  /* margin: 0 auto; */
 }
 
 .postInfo {
-  padding: 7px 30px 0 37px;
+  padding: 10px 30px 0 37px;
   color: #acacac;
 }
 
@@ -122,11 +129,6 @@ textarea:focus {
   display: flex;
   align-items: center;
   justify-content: space-between;
-}
-
-.infoContainer {
-  display: flex;
-  align-items: center;
 }
 
 .icon {
@@ -161,7 +163,6 @@ textarea:focus {
 }
 
 .status {
-  background-color: #c5c5c5;
   padding: 2px 5px;
   border: none;
   border-radius: 5px;
