--- a/src/pages/Tour/TourRegist.module.css
+++ b/src/pages/Tour/TourRegist.module.css
@@ -116,9 +116,10 @@ textarea:focus {
 }
 
 .location {
-  width: 90%;
+  width: 100%;
   display: flex;
   justify-content: space-between;
+  margin-top: 10px;
 }
 
 .submit {
@@ -157,30 +158,33 @@ li {
   border-radius: 20px;
   color: black;
   cursor: pointer;
-  margin=bottom: 30px;
+  margin-bottom: 30px; /* margin-bottom 속성 수정 */
 }
 
 .previews {
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr); /* 5개의 동일한 크기 열을 생성합니다. */
+  grid-gap: 10px; /* 이미지 간격을 조절할 수 있습니다. */
 }
 /* TourRegist.module.css */
 
 .imageRow {
-  display: flex;
-  flex-wrap: wrap;
-  margin: -5px; /* 이미지 간격을 조절할 수 있습니다. */
+  display: grid;
+  grid-template-columns: repeat(5, 1fr); /* 한 줄에 5개의 이미지를 표시하도록 수정 */
+  grid-gap: 10px;
 }
 
 .imageContainer {
-  width: 100px;
-  height: 100px;
-  overflow: hidden; /* 이미지를 컨테이너 크기로 자르기 */
-  margin: 5px; /* 이미지 간격을 조절할 수 있습니다. */
+  width: 100%;
+  height: 172px;
+  overflow: hidden;
+  background: #fff;
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.2);
+  border-radius: 1em;
 }
 
 .image {
-  width: 100%; /* 이미지를 부모 컨테이너 크기에 맞게 확대/축소 */
-  height: 100%; /* 이미지를 부모 컨테이너 크기에 맞게 확대/축소 */
+  width: 100%;
+  height: 100%;
+  object-fit: contain; /* 이미지 비율 유지 및 부모 컨테이너에 맞게 확대/축소 */
 }
