--- a/src/pages/WantTour/WantTourList.module.css
+++ b/src/pages/WantTour/WantTourList.module.css
@@ -8,7 +8,7 @@
 }
 
 .header {
-  padding: 260px 0 50px 0;
+  padding: 260px 0 20px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -22,9 +22,46 @@
   filter: drop-shadow(0px 5px 10px rgba(0, 0, 0, 0.3));
 }
 
+.createBtn {
+  filter: drop-shadow(0px 5px 10px rgba(0, 0, 0, 0.3));
+  opacity: 90%;
+  background-color: #ffffff;
+  border: none;
+  font-size: 17px;
+  font-weight: 700;
+  color: #000000;
+  border-radius: 50px;
+  padding: 10px 30px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin: 0 15px;
+  text-decoration: none;
+  transition: transform 0.3s ease;
+
+  &:hover {
+    transform: translateY(-5px);
+  }
+}
+
+.listInfo {
+  padding: 0 15px 5px 15px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.listBtn:hover {
+  color: #6c6c6c;
+}
+
 .category {
   font-family: 'Happiness-Sans-Title';
   color: #c5c5c5;
+}
+
+.flex {
+  display: flex;
+  align-items: center;
 }
 
 .listTitle {
