--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -9,12 +9,15 @@
   align-items: center;
   z-index: 2;
   width: 100%;
+  word-break: keep-all;
+  min-width: 538px;
 }
 
 .navLogoImage {
-  width: 7vw;
+  width: 10vw;
   padding: 0;
   margin: 0;
+  min-width: 100px;
 }
 
 .pageLink {
@@ -22,11 +25,35 @@
 
 .pageLink > a {
   font-weight: 700;
-  font-size: 0.9vmax;
-  margin-left: 20px;
-  margin-right: 20px;
+  font-size: 1.8vmin;
+  margin-left: 30px;
+  margin-right: 30px;
   text-decoration: none;
   color: black;
+}
+
+.navRight > a {
+  font-weight: 700;
+  font-size: 1.8vmin;
+  margin-left: 20px;
+  margin-right: 20px;
+  padding: 5px 10px 5px 10px;
+  border-radius: 20px;
+
+  text-decoration: none;
+  color: black;
+}
+.mainright > a {
+  font-weight: 700;
+  font-size: 1.8vmin;
+  text-decoration: none;
+  margin-left: 20px;
+  margin-right: 20px;
+  padding: 5px 10px 5px 10px;
+  border-radius: 20px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
+  color: black;
+  background-color: whitesmoke;
 }
 
 .appNav {
