--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -21,11 +21,12 @@
 }
 
 .pageLink {
+  min-width: 500px;
 }
 
 .pageLink > a {
   font-weight: 700;
-  font-size: 1.8vmin;
+  font-size: 16px;
   margin-left: 30px;
   margin-right: 30px;
   text-decoration: none;
@@ -34,7 +35,8 @@
 
 .navRight > a {
   font-weight: 700;
-  font-size: 1.8vmin;
+  font-size: 16px;
+
   margin-left: 20px;
   margin-right: 20px;
   padding: 5px 10px 5px 10px;
@@ -45,7 +47,8 @@
 }
 .mainright > a {
   font-weight: 700;
-  font-size: 1.8vmin;
+  font-size: 16px;
+
   text-decoration: none;
   margin-left: 20px;
   margin-right: 20px;
