--- a/src/pages/ChatPage/style.module.scss
+++ b/src/pages/ChatPage/style.module.scss
@@ -1,19 +1,3 @@
-@mixin mobile {
-  @media screen and (max-width: 480px) {
-    @content;
-  }
-}
-@mixin tablet {
-  @media screen and (max-width: 768px) {
-    @content;
-  }
-}
-@mixin laptop {
-  @media screen and (max-width: 1200px) {
-    @content;
-  }
-}
-
 .formContainer {
   background-color: #a7bcff;
   height: 100vh;
@@ -87,8 +71,7 @@
 }
 
 .home {
-  background-color: #a7bcff;
-  height: 100vh;
+  height: 90vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -96,13 +79,10 @@
   .container {
     border: 1px solid white;
     border-radius: 10px;
-    width: 65%;
+    width: 50%;
     height: 80%;
     display: flex;
     overflow: hidden;
-    @include tablet {
-      width: 90%;
-    }
 
     .sidebar {
       flex: 1;
@@ -120,9 +100,6 @@
 
         .logo {
           font-weight: bold;
-          @include tablet {
-            display: none;
-          }
         }
 
         .user {
@@ -143,10 +120,6 @@
             font-size: 10px;
             border: none;
             cursor: pointer;
-            @include tablet {
-              position: absolute;
-              bottom: 10px;
-            }
           }
         }
       }
@@ -176,6 +149,8 @@
         gap: 10px;
         color: white;
         cursor: pointer;
+        border-top: 1px solid white;
+        border-bottom: 1px solid white;
 
         &:hover {
           background-color: #2f2d52;
@@ -226,7 +201,7 @@
       .messages {
         background-color: #ddddf7;
         padding: 10px;
-        height: calc(100% - 160px);
+        height: calc(100% - 100px);
         overflow: scroll;
 
         .message {
