--- a/src/pages/AreaPage/AreaPage.module.css
+++ b/src/pages/AreaPage/AreaPage.module.css
@@ -20,9 +20,32 @@
 .map {
   width: calc(100% - 300px);
 }
+.tourlisttext {
+  margin-top: 10px;
+  margin-left: 5px;
+  text-decoration-line: underline;
+  text-decoration-color: skyblue;
+  text-decoration-thickness: 4px;
+}
 
-.wrap {
+.areawrap {
   background-color: white;
   width: 300px;
   height: 130px;
+  border-radius: 6px;
+  border: 1px silver solid;
+}
+
+.areainfo {
+}
+.areatitlebox {
+  display: flex;
+  justify-content: space-between;
+  padding: 7px;
+  background-color: skyblue;
+}
+.areaclose {
+}
+.areabody {
+  padding: 7px;
 }
