--- a/src/pages/AreaPage/AreaPage.module.css
+++ b/src/pages/AreaPage/AreaPage.module.css
@@ -15,6 +15,7 @@
   z-index: 3;
   width: 300px;
   padding: 10px;
+  overflow-y: scroll;
 }
 
 .map {
@@ -23,6 +24,8 @@
 .tourlisttext {
   margin-top: 10px;
   margin-left: 5px;
+}
+.tourlisttext2 {
   text-decoration-line: underline;
   text-decoration-color: skyblue;
   text-decoration-thickness: 4px;
@@ -30,14 +33,11 @@
 
 .areawrap {
   background-color: white;
-  width: 300px;
-  height: 130px;
+
   border-radius: 6px;
   border: 1px silver solid;
 }
 
-.areainfo {
-}
 .areatitlebox {
   display: flex;
   justify-content: space-between;
@@ -48,4 +48,8 @@
 }
 .areabody {
   padding: 7px;
+}
+
+.toursearchlist {
+  margin-left: 5px;
 }
