--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -18,29 +18,20 @@
 }
 
 .mainImg {
-  border-radius: 5px;
+  /* border-radius: 5px; */
   width: 280px;
   height: 180px;
-  margin: auto;
-  padding-bottom: 10px;
+  /* margin: auto; */
+  margin-bottom: 10px;
+  /* padding-bottom: 10px; */
 }
 
 .title {
   font-size: 18px;
-  font-weight: 600;
+  /* font-weight: 600; */
   padding-bottom: 8px;
   color: #70aeca;
 }
-
-/* .likebg {
-  width: 30px;
-  height: 30px;
-  background-color: white;
-  border-radius: 50%;
-  position: absolute;
-  top: 10px;
-  right: 10px;
-} */
 
 .like {
   position: absolute;
