--- a/src/pages/WantTour/WantTourList.module.css
+++ b/src/pages/WantTour/WantTourList.module.css
@@ -8,7 +8,7 @@
 }
 
 .header {
-  padding: 300px 0 50px 0;
+  padding: 300px 0 15px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -157,4 +157,16 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.postTitle:hover {
+  color: #50abf2;
+}
+
+.status {
+  padding: 2px 5px;
+  border: none;
+  border-radius: 5px;
+  color: #ffffff;
+  font-size: 0.8rem;
 }
