--- a/src/pages/ChatPage/style.module.scss
+++ b/src/pages/ChatPage/style.module.scss
@@ -71,18 +71,19 @@
 }
 
 .home {
-  height: 90vh;
+  height: 500px;
+  width: 700px;
   display: flex;
   align-items: center;
   justify-content: center;
+  border-radius: 10px;
 
   .container {
-    border: 1px solid white;
+    background-color: rgba(0, 0, 0, 0);
     border-radius: 10px;
-    width: 50%;
-    height: 80%;
+    width: 100%;
+    height: 100%;
     display: flex;
-    overflow: hidden;
 
     .sidebar {
       flex: 1;
@@ -124,10 +125,11 @@
         }
       }
       .search {
-        border-bottom: 1px solid gray;
+        margin-bottom: 10px;
 
         .searchForm {
           padding: 10px;
+          border-bottom: 1px solid gray;
 
           input {
             background-color: transparent;
@@ -140,17 +142,19 @@
             }
           }
         }
+        span {
+          color: white;
+          margin-left: 10px;
+        }
       }
 
       .userChat {
-        padding: 10px;
         display: flex;
         align-items: center;
         gap: 10px;
         color: white;
         cursor: pointer;
-        border-top: 1px solid white;
-        border-bottom: 1px solid white;
+        border-bottom: 1px solid gray;
 
         &:hover {
           background-color: #2f2d52;
@@ -164,6 +168,9 @@
         }
 
         .userChatInfo {
+          margin-top: 10px;
+          margin-bottom: 10px;
+          margin-left: 10px;
           span {
             font-size: 18px;
             font-weight: 500;
@@ -202,7 +209,7 @@
         background-color: #ddddf7;
         padding: 10px;
         height: calc(100% - 100px);
-        overflow: scroll;
+        overflow-y: scroll;
 
         .message {
           display: flex;
