--- a/src/pages/MyPage/MyPageCarousel.css
+++ b/src/pages/MyPage/MyPageCarousel.css
@@ -266,7 +266,7 @@
   right: 0;
   padding: 5px;
   font-size: 10px;
-  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.9);
+  /* text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.9); */
   color: #fff;
 }
 .carousel:hover .slide .legend {
