--- a/src/pages/AreaPage/AreaPage.module.css
+++ b/src/pages/AreaPage/AreaPage.module.css
@@ -44,8 +44,7 @@
   padding: 7px;
   background-color: skyblue;
 }
-.areaclose {
-}
+
 .areabody {
   padding: 7px;
 }
@@ -54,4 +53,50 @@
   margin-left: 5px;
   display: flex;
   flex-direction: row;
+}
+
+.tourinfodialog {
+  background-color: white;
+  border-radius: 10px;
+  border: 1px silver solid;
+  min-width: 200px;
+  min-height: 120px;
+}
+
+.tourtitlebox {
+  background-color: skyblue;
+  padding: 5px;
+  border-radius: 10px 10px 0 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.tourbodybox {
+  border-radius: 10px;
+  padding: 5px;
+}
+.tourinformation {
+  font-size: 14px;
+}
+
+.gotourbutton {
+  width: 80px;
+  height: 24px;
+  text-align: center;
+
+  right: 10px;
+  font-family: monospace;
+  background-color: #3b82f6;
+  color: #fff;
+
+  border: none;
+  border-radius: 4px;
+  font-size: 12px;
+  transition: 0.3s;
+}
+
+.gotourbutton:hover {
+  background-color: #f3f7fe;
+  color: #3b82f6;
+  font-weight: 700;
 }
