--- a/src/pages/Tour/TourRegist.module.css
+++ b/src/pages/Tour/TourRegist.module.css
@@ -92,8 +92,17 @@ textarea:focus {
 }
 
 .price {
-  width: 50px;
   text-align: right;
+  border: 1px solid #c0c0c0;
+  background-color: #f9f9f9;
+  font-size: 17px;
+  padding: 3px 10px;
+  border-radius: 5px;
+}
+
+.price:focus {
+  outline: 2px solid #50abf2;
+  border-color: #ffffff;
 }
 
 .add {
@@ -120,6 +129,7 @@ textarea:focus {
   display: flex;
   justify-content: space-between;
   margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .submit {
@@ -187,4 +197,9 @@ li {
   width: 100%;
   height: 100%;
   object-fit: contain; /* 이미지 비율 유지 및 부모 컨테이너에 맞게 확대/축소 */
+}
+
+.parentContainer {
+  display: flex;
+  align-items: center;
 }
