--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -9,7 +9,6 @@
 
 .card:hover {
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-  /* transform: translateY(-0.5px); */
 }
 
 .content {
@@ -18,17 +17,14 @@
 }
 
 .mainImg {
-  /* border-radius: 5px; */
   width: 280px;
   height: 180px;
-  /* margin: auto; */
   margin-bottom: 10px;
-  /* padding-bottom: 10px; */
 }
 
 .title {
+  font-weight: 600;
   font-size: 18px;
-  /* font-weight: 600; */
   padding-bottom: 8px;
   color: #70aeca;
 }
@@ -37,4 +33,9 @@
   position: absolute;
   top: 3.5px;
   right: 3px;
+}
+
+.theme {
+  color: #c9c9c9;
+  font-size: 16px;
 }
