--- a/src/components/Card/ReviewMain.module.css
+++ b/src/components/Card/ReviewMain.module.css
@@ -1,25 +1,26 @@
 .container {
-    background-color: #f9f9f9;
-    border-radius: 10px;
-    font-size: 16px;
-    padding: 25px 20px;
-    display: flex;
-    margin-right: 10px;
-    margin-bottom: 10px;
-    max-height: 110px;
-  }
-  
-  .content {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    width: 85%;
-  }
-  
-  .image {
-    flex: 1;
-    border-radius: 9999px;
-    padding: 1px 20px;
-    height: auto;
-  }
-  
+  background-color: #f9f9f9;
+  border-radius: 10px;
+  font-size: 16px;
+  padding: 25px 20px;
+  display: flex;
+  align-items: center;
+  margin: 5px 10px 5px 0;
+  height: 115px;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 85%;
+}
+
+.image {
+  flex: 1;
+  border-radius: 9999px;
+  padding: 1px 20px;
+  height: 60px;
+  width: 60px;
+  object-fit: cover;
+}
