--- a/src/components/Chat/GuideButton.module.css
+++ b/src/components/Chat/GuideButton.module.css
@@ -9,7 +9,7 @@
   display: flex;
   justify-content: center;
   border: none;
-  padding: 13px 4.5px;
+  /* padding: 13px 4.5px; */
 }
 
 .content {
