--- a/src/pages/Tour/TourList.module.css
+++ b/src/pages/Tour/TourList.module.css
@@ -12,6 +12,18 @@ FormGroup {
   /* left: -10%; */
   font-size: 90px;
   font-weight: bold;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.topdiv .registButton {
+  width: 100px;
+  height: 90px;
+  font-size: 20px;
+  font-weight: bold;
+  border: 0px;
+  border-radius: 10px;
 }
 
 .topcard {
