--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,7 +1,7 @@
 .webNav {
   margin: 0;
   box-sizing: border-box;
-  padding: 10px 30px 10px 10px;
+  padding: 10px 20px 10px 20px;
   margin: 0;
   display: flex;
   flex-direction: row;
@@ -35,12 +35,14 @@
 .pageLink > a:hover {
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
 }
-
+.navRight {
+  width: 10vw;
+  text-align: end;
+}
 .navRight > a {
-  font-weight: 500;
+  font-weight: 600;
   font-size: 16px;
-  padding: 5px 7px 5px 7px;
-  border-radius: 20px;
+  padding-right: 5px;
   margin-left: 10px;
   text-decoration: none;
   color: black;
@@ -48,13 +50,17 @@
 .navRight > a:hover {
   text-shadow: 2px 1px 4px rgba(0, 0, 0, 0.25);
 }
+.mainright {
+  width: 10vw;
+  text-align: end;
+}
+
 .mainright > a {
-  font-weight: 500;
+  font-weight: 600;
   font-size: 16px;
   text-decoration: none;
   margin-left: 10px;
-  padding: 5px 7px 5px 7px;
-  border-radius: 20px;
+  padding-right: 5px;
   color: white;
 }
 .mainright > a:hover {
