--- a/src/pages/RecommendPage/Recommend.module.css
+++ b/src/pages/RecommendPage/Recommend.module.css
@@ -50,3 +50,16 @@
   color: #b4b4b4;
   margin-bottom: 35px;
 }
+
+.moreBtn {
+  padding: 10px 20px;
+  border-radius: 5px;
+  background-color: #50abf2;
+  color: #ffffff;
+  display: flex;
+  margin: 40px 0;
+
+  &:hover {
+    background-color: #0791df;
+  }
+}
