--- a/src/components/Card/TourListCard.module.css
+++ b/src/components/Card/TourListCard.module.css
@@ -1,16 +1,16 @@
 .card {
-  border: #c9c9c9;
+  box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   background-color: white;
   width: 300px;
-  height: 100%;
+  height: 310px;
   margin: 30px 10px 10px;
   padding-bottom: 6px;
   transition: box-shadow 0.15s ease-out, transform 0.15s ease-out;
 }
 
 .card:hover {
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 5px 8px rgba(0, 0, 0, 0.1);
   transform: translateY(-5px);
 }
 
@@ -30,23 +30,31 @@
 }
 
 .title {
+  width: 250px;
   position: absolute;
+  text-align: end;
   right: 10%;
   font-size: 20px;
   font-weight: 600;
-  /* margin-top: 3%; */
-  padding-bottom: 8px;
+  margin-top: 4%;
+  padding-bottom: 10px;
   color: #70aeca;
 }
-
-.like {
+.likeDiv {
   position: absolute;
-  right: 26%;
+  right: 8%;
+  top: 250px;
+  margin-top: 6%;
+}
+.like {
+  /* position: absolute; */
+  /* top: 30%; */
+  /* right: 26%; */
   margin-top: 8%;
 }
 .likecount {
-  position: absolute;
-  right: 10%;
+  /* position: absolute; */
+  /* right: 10%; */
   margin-top: 8%;
   color: #828282;
 }
