--- a/src/pages/RecommendPage/Recommend.module.css
+++ b/src/pages/RecommendPage/Recommend.module.css
@@ -63,3 +63,16 @@
     background-color: #0791df;
   }
 }
+
+.closeBtn {
+  padding: 10px 20px;
+  border-radius: 5px;
+  background-color: #ffe500;
+  color: #ffffff;
+  display: flex;
+  margin: 40px 0;
+
+  &:hover {
+    background-color: #ffd600;
+  }
+}
