--- a/src/components/Card/TourListCard.module.css
+++ b/src/components/Card/TourListCard.module.css
@@ -1,60 +1,63 @@
 .card {
-  box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.1);
-  border-radius: 10px;
+  border: 1px solid #c9c9c9;
+  border-radius: 5px;
   background-color: white;
-  width: 300px;
-  height: 310px;
-  margin: 30px 10px 10px;
-  padding-bottom: 6px;
+  width: 95%;
+  height: 200px;
+  margin: 10px auto;
+  /* padding: 0px 3px; */
   transition: box-shadow 0.15s ease-out, transform 0.15s ease-out;
 }
 
 .card:hover {
-  box-shadow: 0px 5px 8px rgba(0, 0, 0, 0.1);
-  transform: translateY(-5px);
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .content {
   position: relative;
-  display: flex;
-  justify-content: center;
+  /* text-align: center; */
+  width: 100%;
+  display: grid;
+  grid-template-columns: 60% 40%;
+  /* align-items: center; */
+  padding: 2px;
 }
 
 .mainImg {
-  border-radius: 10px;
-  width: 280px;
-  height: 180px;
-  margin: auto 5px;
-  /* padding: 3px; */
-  padding-bottom: 10px;
+  width: 100%;
+  height: 190px;
+  /* margin-bottom: 10px; */
+  object-fit: cover;
 }
 
 .title {
-  width: 250px;
-  position: absolute;
-  text-align: end;
-  right: 10%;
-  font-size: 20px;
   font-weight: 600;
-  margin-top: 4%;
-  padding-bottom: 10px;
+  font-size: 18px;
+  padding: 20px 1px 3px;
   color: #70aeca;
+  height: 100px;
 }
-.likeDiv {
-  position: absolute;
-  right: 8%;
-  top: 250px;
-  margin-top: 6%;
-}
+
 .like {
-  /* position: absolute; */
-  /* top: 30%; */
-  /* right: 26%; */
-  margin-top: 8%;
+  position: absolute;
+  top: 3.5px;
+  left: 3px;
+  filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.2));
+  transition: transform 0.5s ease;
+
+  &:hover {
+    transform: scale(1.1);
+  }
 }
-.likecount {
-  /* position: absolute; */
-  /* right: 10%; */
-  margin-top: 8%;
-  color: #828282;
+
+.theme {
+  color: #c9c9c9;
+  font-size: 16px;
+}
+
+.likeIcon {
+  filter: drop-shadow(0px 5px 10px rgba(0, 0, 0, 0.3));
+  fill: #ff6073;
+  margin-right: 3px;
+  padding-left: 1px;
 }
